<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Appoint_time">

<!--    <TextView-->
<!--        android:id="@+id/user_details"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:visibility="gone"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:textSize="20dp"-->
<!--        android:text="Hello!"/>-->


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="Choose your Time!"
        android:textColor="#000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <AutoCompleteTextView
            android:id="@+id/hour_choose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="time"
            android:inputType="none"/>


    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20dp"
            android:text="Client name:"/>

        <TextView
            android:id="@+id/barber_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20dp"
            android:text="Barber name: "/>

        <TextView
            android:id="@+id/date_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20dp"
            android:text="Appointment date: "/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingTop="0dp"
            android:src="@drawable/barber_logo" />

    </LinearLayout>

    <Button
        android:id="@+id/bookNow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="#BFD88100"
        android:text="@string/book_now"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold"
        android:enabled="false"
        android:layout_marginTop="15dp"/>

    <GridLayout
        android:id="@+id/grid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:columnCount="3"
        android:rowCount="1"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/my_appointement"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/my_appointement_img"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/calender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_appointement" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF9800"
                android:text="@string/logout"
                android:textColor="#fff"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cancel_order"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cancel_order_img"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_order" />
        </LinearLayout>

    </GridLayout>


</LinearLayout>